feat: implement clerk authentication and partially implemented broadband retrieval

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -10,6 +10,10 @@
   
 }
 
+.SignIn {
+    margin: 10px;
+}
+
 .App-header {
   background: linear-gradient(45deg, rgb(255, 0, 144), purple, violet, cyan);
   background-size: 300% 300%;
